# rxio

./: .gitignore  CHANGELOG.md  README.md  examples.py  pyproject.toml
.github/workflows/: CI.yml
rxio/: __init__.py  _state.py  _typing.py  _utils.py  core.py  getters.py  rx.py  utils.py
rxio/typing/: __init__.py  _binops.py  _binops_i.py  _binops_r.py  _nullops.py  _slice.py  _specialattrs.py  _unops.py
tests/: test_getters.py  test_rxio.py  test_rxvar.py  test_version.py
